# moteur_jeur-alpharius-

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  a.py  p.txt
app/: main.cpp
dependance/opengl/: gl.h
engine/lscrupt/: CMakeLists.txt
engine/script/: CMakeLists.txt
engine/son/: CMakeLists.txt  main.cpp
engine/son/implementation fmod/: CMakeLists.txt
engine/son/implementation fmod/src/: main.cpp
engine/son/implementaton openal/: CMakeLists.txt
engine/son/implementaton openal/src/: main.cpp
src/rendus/opengl/: gl.c
